# yanbaru-Hack-z-back

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  compose.yml  dockerfile  pyproject.toml
.github/workflows/: lint-python.yml
backend/: .env.sample  db.py  main.py  reset.py  seed.py
backend/cruds/: color.py
backend/models/: color.py  voice.py
backend/router/: color.py  match.py  voice.py
backend/schema/: color.py  match.py  modifing_syllable.py  voice.py
backend/services/: average_amplitude_calculator.py  cutting_sound.py  divide_at_min_peak.py  exclude_weakest_syllable.py  feature_extraction.py  midi_pitch_calculator.py  modifing_syllable.py  sound_research.py  speech_rating.py  syllable_max_amplitude.py  syllable_wave_detector.py  waveform_drawer.py
backend/services/feature_analysis/: feature_extraction.py  main.py
backend/services/feature_analysis/analysis/: amplitude_peak_detector.py  modifing_syllable.py  sound_display.py  syllable_detector.py
backend/utils/: config.py  decode.py  download.py  makecolor.py
