[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["simesaba80 <simesaba80>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
ruff = "^0.6.4"
sqlalchemy = "^2.0.34"
aiomysql = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
