[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["simesaba80 <simesaba80>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
ruff = "^0.6.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
pydub = "^0.25.1"
matplotlib = "^3.9.2"
google-cloud-storage = "^2.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
